--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
   <input id="input" placeholder="Write something here"></input>
   <button onclick="onclick()">Click</button>
   <h5 id="text">Text</h5>
+  <script src="script.js"></script>
 </body>
