--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<header>
-  <h1>Here's my testing website</h1>
-</header>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Testing Website</title>
+</head>
 <body>
+  <header>
+    <h1>Here's my testing website</h1>
+  </header>
   <input id="input" placeholder="Write something here"></input>
   <button onclick="onclick()">Click</button>
-  <h5 id="text">Text</h5>
+  <h3 id="text">Text</h3>
   <script src="script.js"></script>
 </body>
+</html>
