--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Here's my testing website</h1>
+    <h1 id="title">Here's my testing website</h1>
   </header>
   <input id="input" placeholder="Write something here"></input>
   <button onclick="onclick()">Click</button>
