--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="title">Here's my testing website</h1>
   </header>
   <input id="input" placeholder="Write something here"></input>
-  <button onclick="onclick()">Click</button>
+  <button onclick="updateTxt()">Click</button>
   <h3 id="text">Text</h3>
   <script src="script.js"></script>
 </body>
